// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hyphens renders 0 1`] = `
Array [
  .c0 {
  -webkit-hyphens: 0;
  -moz-hyphens: 0;
  -ms-hyphens: 0;
  hyphens: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: 0;
  -moz-hyphens: 0;
  -ms-hyphens: 0;
  hyphens: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: 0;
  -moz-hyphens: 0;
  -ms-hyphens: 0;
  hyphens: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: 0;
  -moz-hyphens: 0;
  -ms-hyphens: 0;
  hyphens: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphens renders function 1`] = `
Array [
  .c0 {
  -webkit-hyphens: hasnot;
  -moz-hyphens: hasnot;
  -ms-hyphens: hasnot;
  hyphens: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: has;
  -moz-hyphens: has;
  -ms-hyphens: has;
  hyphens: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: hasnot;
  -moz-hyphens: hasnot;
  -ms-hyphens: hasnot;
  hyphens: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: has;
  -moz-hyphens: has;
  -ms-hyphens: has;
  hyphens: has;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphens renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-hyphens: invalid.path.1;
  -moz-hyphens: invalid.path.1;
  -ms-hyphens: invalid.path.1;
  hyphens: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: invalid.path.1;
  -moz-hyphens: invalid.path.1;
  -ms-hyphens: invalid.path.1;
  hyphens: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: invalid.path.1;
  -moz-hyphens: invalid.path.1;
  -ms-hyphens: invalid.path.1;
  hyphens: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: invalid.path.1;
  -moz-hyphens: invalid.path.1;
  -ms-hyphens: invalid.path.1;
  hyphens: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphens renders negative number 1`] = `
Array [
  .c0 {
  -webkit-hyphens: -54881;
  -moz-hyphens: -54881;
  -ms-hyphens: -54881;
  hyphens: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: -54881;
  -moz-hyphens: -54881;
  -ms-hyphens: -54881;
  hyphens: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: -42365;
  -moz-hyphens: -42365;
  -ms-hyphens: -42365;
  hyphens: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: -42365;
  -moz-hyphens: -42365;
  -ms-hyphens: -42365;
  hyphens: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphens renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-hyphens: July;
  -moz-hyphens: July;
  -ms-hyphens: July;
  hyphens: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: September;
    -moz-hyphens: September;
    -ms-hyphens: September;
    hyphens: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: July;
  -moz-hyphens: July;
  -ms-hyphens: July;
  hyphens: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: September;
    -moz-hyphens: September;
    -ms-hyphens: September;
    hyphens: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: January;
  -moz-hyphens: January;
  -ms-hyphens: January;
  hyphens: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: December;
    -moz-hyphens: December;
    -ms-hyphens: December;
    hyphens: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: April;
    -moz-hyphens: April;
    -ms-hyphens: April;
    hyphens: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: May;
    -moz-hyphens: May;
    -ms-hyphens: May;
    hyphens: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphens: June;
    -moz-hyphens: June;
    -ms-hyphens: June;
    hyphens: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: January;
  -moz-hyphens: January;
  -ms-hyphens: January;
  hyphens: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: December;
    -moz-hyphens: December;
    -ms-hyphens: December;
    hyphens: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: April;
    -moz-hyphens: April;
    -ms-hyphens: April;
    hyphens: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: May;
    -moz-hyphens: May;
    -ms-hyphens: May;
    hyphens: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphens: June;
    -moz-hyphens: June;
    -ms-hyphens: June;
    hyphens: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphens renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: July;
    -moz-hyphens: July;
    -ms-hyphens: July;
    hyphens: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: September;
    -moz-hyphens: September;
    -ms-hyphens: September;
    hyphens: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: July;
    -moz-hyphens: July;
    -ms-hyphens: July;
    hyphens: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: September;
    -moz-hyphens: September;
    -ms-hyphens: September;
    hyphens: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: May;
    -moz-hyphens: May;
    -ms-hyphens: May;
    hyphens: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: June;
    -moz-hyphens: June;
    -ms-hyphens: June;
    hyphens: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: April;
    -moz-hyphens: April;
    -ms-hyphens: April;
    hyphens: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: May;
    -moz-hyphens: May;
    -ms-hyphens: May;
    hyphens: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: June;
    -moz-hyphens: June;
    -ms-hyphens: June;
    hyphens: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphens: April;
    -moz-hyphens: April;
    -ms-hyphens: April;
    hyphens: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphens renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-hyphens: July;
  -moz-hyphens: July;
  -ms-hyphens: July;
  hyphens: July;
}

@media May {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: September;
    -moz-hyphens: September;
    -ms-hyphens: September;
    hyphens: September;
  }
}

@media January {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media June {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: July;
  -moz-hyphens: July;
  -ms-hyphens: July;
  hyphens: July;
}

@media May {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: September;
    -moz-hyphens: September;
    -ms-hyphens: September;
    hyphens: September;
  }
}

@media January {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media June {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: April;
  -moz-hyphens: April;
  -ms-hyphens: April;
  hyphens: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: January;
    -moz-hyphens: January;
    -ms-hyphens: January;
    hyphens: January;
  }
}

@media January {
  .c0 {
    -webkit-hyphens: December;
    -moz-hyphens: December;
    -ms-hyphens: December;
    hyphens: December;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: April;
    -moz-hyphens: April;
    -ms-hyphens: April;
    hyphens: April;
  }
}

@media June {
  .c0 {
    -webkit-hyphens: May;
    -moz-hyphens: May;
    -ms-hyphens: May;
    hyphens: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: April;
  -moz-hyphens: April;
  -ms-hyphens: April;
  hyphens: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: January;
    -moz-hyphens: January;
    -ms-hyphens: January;
    hyphens: January;
  }
}

@media January {
  .c0 {
    -webkit-hyphens: December;
    -moz-hyphens: December;
    -ms-hyphens: December;
    hyphens: December;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: April;
    -moz-hyphens: April;
    -ms-hyphens: April;
    hyphens: April;
  }
}

@media June {
  .c0 {
    -webkit-hyphens: May;
    -moz-hyphens: May;
    -ms-hyphens: May;
    hyphens: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphens renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-hyphens: July;
    -moz-hyphens: July;
    -ms-hyphens: July;
    hyphens: July;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media January {
  .c0 {
    -webkit-hyphens: September;
    -moz-hyphens: September;
    -ms-hyphens: September;
    hyphens: September;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media June {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-hyphens: July;
    -moz-hyphens: July;
    -ms-hyphens: July;
    hyphens: July;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media January {
  .c0 {
    -webkit-hyphens: September;
    -moz-hyphens: September;
    -ms-hyphens: September;
    hyphens: September;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: November;
    -moz-hyphens: November;
    -ms-hyphens: November;
    hyphens: November;
  }
}

@media June {
  .c0 {
    -webkit-hyphens: August;
    -moz-hyphens: August;
    -ms-hyphens: August;
    hyphens: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphens: January;
    -moz-hyphens: January;
    -ms-hyphens: January;
    hyphens: January;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: December;
    -moz-hyphens: December;
    -ms-hyphens: December;
    hyphens: December;
  }
}

@media January {
  .c0 {
    -webkit-hyphens: April;
    -moz-hyphens: April;
    -ms-hyphens: April;
    hyphens: April;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: May;
    -moz-hyphens: May;
    -ms-hyphens: May;
    hyphens: May;
  }
}

@media June {
  .c0 {
    -webkit-hyphens: June;
    -moz-hyphens: June;
    -ms-hyphens: June;
    hyphens: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphens: January;
    -moz-hyphens: January;
    -ms-hyphens: January;
    hyphens: January;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: December;
    -moz-hyphens: December;
    -ms-hyphens: December;
    hyphens: December;
  }
}

@media January {
  .c0 {
    -webkit-hyphens: April;
    -moz-hyphens: April;
    -ms-hyphens: April;
    hyphens: April;
  }
}

@media April {
  .c0 {
    -webkit-hyphens: May;
    -moz-hyphens: May;
    -ms-hyphens: May;
    hyphens: May;
  }
}

@media June {
  .c0 {
    -webkit-hyphens: June;
    -moz-hyphens: June;
    -ms-hyphens: June;
    hyphens: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphens renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-hyphens: 54881;
  -moz-hyphens: 54881;
  -ms-hyphens: 54881;
  hyphens: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: 54881;
  -moz-hyphens: 54881;
  -ms-hyphens: 54881;
  hyphens: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: 42365;
  -moz-hyphens: 42365;
  -ms-hyphens: 42365;
  hyphens: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: 42365;
  -moz-hyphens: 42365;
  -ms-hyphens: 42365;
  hyphens: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphens renders string 1`] = `
Array [
  .c0 {
  -webkit-hyphens: July;
  -moz-hyphens: July;
  -ms-hyphens: July;
  hyphens: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: July;
  -moz-hyphens: July;
  -ms-hyphens: July;
  hyphens: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: June;
  -moz-hyphens: June;
  -ms-hyphens: June;
  hyphens: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: June;
  -moz-hyphens: June;
  -ms-hyphens: June;
  hyphens: June;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphens renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`hyphens renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-hyphens: DarkSlateBlue;
  -moz-hyphens: DarkSlateBlue;
  -ms-hyphens: DarkSlateBlue;
  hyphens: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: DarkSlateBlue;
  -moz-hyphens: DarkSlateBlue;
  -ms-hyphens: DarkSlateBlue;
  hyphens: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: DarkSlateBlue;
  -moz-hyphens: DarkSlateBlue;
  -ms-hyphens: DarkSlateBlue;
  hyphens: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphens: DarkSlateBlue;
  -moz-hyphens: DarkSlateBlue;
  -ms-hyphens: DarkSlateBlue;
  hyphens: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
